--- a/DragDiffusion_colab.ipynb
+++ b/DragDiffusion_colab.ipynb
@@ -1,43 +1,44 @@
 {
-    "nbformat": 4,
-    "nbformat_minor": 0,
-    "metadata": {
-      "colab": {
-        "provenance": [],
-        "gpuType": "T4"
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github"
       },
-      "kernelspec": {
-        "name": "python3",
-        "display_name": "Python 3"
-      },
-      "language_info": {
-        "name": "python"
-      },
-      "accelerator": "GPU"
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/camenduru/DragDiffusion-colab/blob/main/DragDiffusion_colab.ipynb)"
+      ]
     },
-    "cells": [
-        {
-          "cell_type": "markdown",
-          "metadata": {
-            "id": "view-in-github"
-          },
-          "source": [
-            "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/camenduru/DragDiffusion-colab/blob/main/DragDiffusion_colab.ipynb)"
-          ]
-        },
-      {
-        "cell_type": "code",
-        "execution_count": null,
-        "metadata": {
-          "id": "XvH6lW2YOLOm"
-        },
-        "outputs": [],
-        "source": [
-          "!git clone -b dev https://github.com/camenduru/DragDiffusion\n",
-          "%cd /content/DragDiffusion\n",
-          "!pip install gradio einops diffusers pytorch_lightning transformers\n",
-          "!python drag_ui_real.py"
-        ]
-      }
-    ]
-  }
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "XvH6lW2YOLOm"
+      },
+      "outputs": [],
+      "source": [
+        "%cd /content\n",
+        "!git clone -b dev https://github.com/camenduru/DragDiffusion\n",
+        "!pip install gradio einops diffusers pytorch_lightning transformers\n",
+        "%cd /content/DragDiffusion\n",
+        "!python drag_ui_real.py"
+      ]
+    }
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "gpuType": "T4",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
+}
