--- a/DragDiffusion_colab.ipynb
+++ b/DragDiffusion_colab.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/DragDiffusion\n",
-        "!pip install gradio einops diffusers pytorch_lightning transformers accelerate\n",
+        "!pip install gradio einops diffusers pytorch_lightning transformers accelerate==0.17.0\n",
         "%cd /content/DragDiffusion\n",
         "!python drag_ui_real.py"
       ]
