--- a/DragDiffusion_train_colab.ipynb
+++ b/DragDiffusion_train_colab.ipynb
@@ -19,7 +19,15 @@
       "source": [
         "%cd /content\n",
         "!git clone -b dev https://github.com/camenduru/DragDiffusion\n",
-        "!pip install gradio einops diffusers pytorch_lightning transformers accelerate==0.17.0\n",
+        "!pip install gradio einops diffusers pytorch_lightning transformers accelerate==0.17.0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "%cd /content/DragDiffusion\n",
         "!bash lora/train_lora.sh"
       ]
